--- a/GuiLabDPS/guia01/primerversion.html
+++ b/GuiLabDPS/guia01/primerversion.html
@@ -11,3 +11,5 @@ Mercurial, Bazaar o Darcs. En este tipo de herramientas, los clientes replican
 completamente el repositorio.
 
 Nuevo Párrafo A1
+
+Nuevo Párrafo B1
